Working on google play services

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">TestDots</string>
     <string name="app_name1">Coontdoon</string>
+    <string name="app_id">63823782637</string>
+    <string name="google_app_id">63823782637</string>
+    <string name="leaderboard">CgkI7cXG4e0BEAIQAQ </string>
 </resources>
